--- a/example/index.html
+++ b/example/index.html
@@ -14,12 +14,12 @@
 
 		<meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
 
-		<link rel="stylesheet" href="../style/pingas.css">
 		<link rel="stylesheet" href="../reveal.js/css/reveal.css">
 		<link rel="stylesheet" href="../reveal.js/css/theme/white.css" id="theme">
 
 		<!-- Theme used for syntax highlighting of code -->
 		<link rel="stylesheet" href="../reveal.js/lib/css/zenburn.css">
+		<link rel="stylesheet" href="../style/pingas.css">
 
 		<!-- Printing and PDF exports -->
 		<script>
@@ -45,7 +45,7 @@
 					<h1>Ping a Programadoras</h1>
 					<h3>Presenta</h3>
 					<p>
-						<small>Created by <a href="http://twitter.com/pingmujeres">Ping a Programadors</a> / <a href="http://twitter.com/pingmujeres">@pingmujeres</a></small>
+						<small>Created by <a href="http://twitter.com/pingmujeres">Ping a Programadoras</a> / <a href="http://twitter.com/pingmujeres">@pingmujeres</a></small>
 					</p>
 				</section>
 
