--- a/201706-girona/index.html
+++ b/201706-girona/index.html
@@ -136,12 +136,20 @@
           <p>Fuente: El Mundo, Ministerio de Educación ESTAT, OCDE y Crue</p>
         </section>
       </section>
-      
+
       <section>
-      <aside class="notes">
-        Todo esto es importante porque si no hay diversidad, se cometen errores. http://sciencenordic.com/gender-equality-crash-test-dummies-too
-      </aside>
-        <p><img src="images/crash-test.jpg"/></p>
+        <section>
+        <aside class="notes">
+          Todo esto es importante porque si no hay diversidad, se cometen errores. http://sciencenordic.com/gender-equality-crash-test-dummies-too
+        </aside>
+          <p><img src="images/crash-test.jpg"/></p>
+        </section>
+        <section>
+        <aside class="notes">
+          Aunque sea por tonterías como esta.
+        </aside>
+          <blockquote class="twitter-tweet" data-lang="en"><p lang="en" dir="ltr">Focus group. This could have been avoided with 1 focus group (of women). <a href="https://t.co/C76lv5ji33">pic.twitter.com/C76lv5ji33</a></p>&mdash; Jillian David (@JillianDavid13) <a href="https://twitter.com/JillianDavid13/status/881844097505538048">July 3, 2017</a></blockquote>
+        </section>
       </section>
       
       <section>
