Add GeoCat logo. Easily removable just by commenting this line

--- a/201706-girona/index.html
+++ b/201706-girona/index.html
@@ -40,6 +40,7 @@
   <body>
 
     <div class="reveal">
+      <header style="position:fixed;top:0px;left:0px;z-index: 3;"><img style="max-height:60px;z-index:3" src="https://delawen.github.io/slides/stylesheets/images/GeoCat.png"/></header>
 
       <!-- Any section element inside of this container is displayed as a slide -->
       <div class="slides">
