New title and removing http references. All local

--- a/201706-girona/index.html
+++ b/201706-girona/index.html
@@ -40,12 +40,12 @@
   <body>
 
     <div class="reveal">
-      <header style="position:fixed;top:0px;left:0px;z-index: 3;"><img style="max-height:60px;z-index:3" src="https://delawen.github.io/slides/stylesheets/images/GeoCat.png"/></header>
+      <header style="position:fixed;top:0px;left:0px;z-index: 3;"><img style="max-height:60px;z-index:3" src="../../slides/stylesheets/images/GeoCat.png"/></header>
 
       <!-- Any section element inside of this container is displayed as a slide -->
       <div class="slides">
         <section>
-          <h1>Ping a Programadoras</h1>
+          <h1>What's up with diversity?</h1>
           <p>
             <small><a href="https://www.meetup.com/es-ES/Ping-a-mujeres-programadoras/">Ping a Programadoras</a> / <a href="http://twitter.com/pingmujeres">@pingmujeres</a></small>
           </p>
