Offline and new smbc comic image

--- a/201706-girona/index.html
+++ b/201706-girona/index.html
@@ -64,7 +64,7 @@
             <img title="GeoCat Herd" style="max-width:800px;max-height:150px;margin:0px" class="clean" src="https://pbs.twimg.com/media/CkbClWVXIAQYY1M.jpg">
           </div>
           <div>
-            <img title="GeoCat" style="max-width:800px;max-height:400px;margin:0px" src="https://delawen.github.io/slides/stylesheets/images/quienesSomos.svg">
+            <img title="GeoCat" style="max-width:800px;max-height:400px;margin:0px" src="../../slides/stylesheets/images/quienesSomos.svg">
           </div>
         </section>  
         
@@ -73,7 +73,7 @@
           Hoy venimos a hablar de *esto*
         </aside>
           <div>
-            <blockquote class="twitter-tweet  tw-align-center " data-lang="en"><p lang="en" dir="ltr">me at a tech conference <a href="http://t.co/XbHux754Rc">pic.twitter.com/XbHux754Rc</a></p>&mdash; pamela marie (@pwnela) <a href="https://twitter.com/pwnela/status/648506060068790272">September 28, 2015</a></blockquote>
+            <blockquote class="twitter-tweet  tw-align-center " data-lang="en"><p lang="en" dir="ltr">me at a tech conference <a href="http://t.co/XbHux754Rc"><img src="images/meAtATechConference.jpg"/></a></p>&mdash; pamela marie (@pwnela) <a href="https://twitter.com/pwnela/status/648506060068790272">September 28, 2015</a></blockquote>
           </div>
         </section>      
         
@@ -161,7 +161,7 @@
           Aunque sea por tonterías como esta.
         </aside>
           <div>
-            <blockquote class="twitter-tweet  tw-align-center " data-lang="en"><p lang="en" dir="ltr">Focus group. This could have been avoided with 1 focus group (of women). <a href="https://t.co/C76lv5ji33">pic.twitter.com/C76lv5ji33</a></p>&mdash; Jillian David (@JillianDavid13) <a href="https://twitter.com/JillianDavid13/status/881844097505538048">July 3, 2017</a></blockquote>
+            <blockquote class="twitter-tweet  tw-align-center " data-lang="en"><p lang="en" dir="ltr">Focus group. This could have been avoided with 1 focus group (of women). <a href="https://t.co/C76lv5ji33"><img style="max-height:350px" src="images/FocusGroup.jpg"/></a></p>&mdash; Jillian David (@JillianDavid13) <a href="https://twitter.com/JillianDavid13/status/881844097505538048">July 3, 2017</a></blockquote>
           </div>
         </section>
       </section>
@@ -214,6 +214,9 @@ Neil Degrasse Tyson
           </aside>
           <img style="float:left;width:20%" src="images/boys_girls.png"/>
           <img style="float:right;width:78%" src="images/girls_boys.png"/>
+        </section>
+        <section data-background="images/smbc-comics.jpg" data-background-size="contain">
+          <aside class="notes">smbc-comic.com</aside>
         </section>
         <section>
           <aside class="notes">
