--- a/201706-girona/index.html
+++ b/201706-girona/index.html
@@ -40,7 +40,7 @@
   <body>
 
     <div class="reveal">
-      <header style="position:fixed;top:0px;left:0px;z-index: 3;"><img style="max-height:60px;z-index:3" src="../../slides/stylesheets/images/GeoCat.png"/></header>
+      <header style="position:fixed;top:0px;left:0px;z-index: 3;"><img style="max-height:60px;z-index:3" src="images/GeoCat.png"/></header>
 
       <!-- Any section element inside of this container is displayed as a slide -->
       <div class="slides">
@@ -61,10 +61,10 @@
         <h2>Who am I</h2>
           <div style="float:left;max-width:49%">
             <p><a href="https://geocat.net">GeoCat bv</a> (<a href="https://twitter.com/geocat_bv">@geocat_bv</a>)</p>
-            <img title="GeoCat Herd" style="max-width:800px;max-height:150px;margin:0px" class="clean" src="https://pbs.twimg.com/media/CkbClWVXIAQYY1M.jpg">
+            <img title="GeoCat Herd" style="max-width:800px;max-height:150px;margin:0px" class="clean" src="images/GeoCatHerd.png">
           </div>
           <div>
-            <img title="GeoCat" style="max-width:800px;max-height:400px;margin:0px" src="../../slides/stylesheets/images/quienesSomos.svg">
+            <img title="GeoCat" style="max-width:800px;max-height:400px;margin:0px" src=images/quienesSomos.svg">
           </div>
         </section>  
         
