--- a/201706-girona/index.html
+++ b/201706-girona/index.html
@@ -64,7 +64,7 @@
             <img title="GeoCat Herd" style="max-width:800px;max-height:150px;margin:0px" class="clean" src="images/GeoCatHerd.png">
           </div>
           <div>
-            <img title="GeoCat" style="max-width:800px;max-height:400px;margin:0px" src=images/quienesSomos.svg">
+            <img title="GeoCat" style="max-width:800px;max-height:400px;margin:0px" src="images/quienesSomos.svg">
           </div>
         </section>  
         
